updated the Refernce

--- a/_posts/python/privacy/2015-06-30-privacy.html
+++ b/_posts/python/privacy/2015-06-30-privacy.html
@@ -18,7 +18,16 @@ thumbnail: /images/privacy.png
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Public,-Private-and-Secret-Graphs-in-Python">Public, Private and Secret Graphs in Python<a class="anchor-link" href="#Public,-Private-and-Secret-Graphs-in-Python">&#182;</a></h1>
+<h1 id="Public,-Private-and-Secret">Public, Private and Secret<a class="anchor-link" href="#Public,-Private-and-Secret">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Graphs-in-Python">Graphs in Python<a class="anchor-link" href="#Graphs-in-Python">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -34,7 +43,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
@@ -49,7 +58,7 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
@@ -73,7 +82,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="c"># Learn about API authentication here: https://plot.ly/python/getting-started</span>
@@ -99,7 +108,7 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[8]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~neda/6988.embed" height="525px" width="100%"></iframe>
@@ -123,7 +132,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;privacy-public&#39;</span><span class="p">,</span> <span class="n">sharing</span><span class="o">=</span><span class="s">&#39;public&#39;</span><span class="p">)</span>
@@ -137,11 +146,11 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[9]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;https://plot.ly/~neda/6988&apos;</pre>
+<pre>u&apos;https://plot.ly/~neda/6988&apos;</pre>
 </div>
 
 </div>
@@ -161,7 +170,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;privacy-private&#39;</span><span class="p">,</span> <span class="n">sharing</span><span class="o">=</span><span class="s">&#39;private&#39;</span><span class="p">)</span>
@@ -175,7 +184,7 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[15]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~neda/6994.embed" height="525px" width="100%"></iframe>
@@ -199,7 +208,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;privacy-private&#39;</span><span class="p">,</span> <span class="n">sharing</span><span class="o">=</span><span class="s">&#39;private&#39;</span><span class="p">)</span>
@@ -213,11 +222,11 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[14]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;https://plot.ly/~neda/6994&apos;</pre>
+<pre>u&apos;https://plot.ly/~neda/6994&apos;</pre>
 </div>
 
 </div>
@@ -237,7 +246,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;privacy-secret&#39;</span><span class="p">,</span> <span class="n">sharing</span><span class="o">=</span><span class="s">&#39;secret&#39;</span><span class="p">)</span>
@@ -251,7 +260,7 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[16]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~neda/6997.embed?share_key=KLZpeiMaST2rqfEyqkP5ho" height="525px" width="100%"></iframe>
@@ -275,7 +284,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;privacy-secret&#39;</span><span class="p">,</span> <span class="n">sharing</span><span class="o">=</span><span class="s">&#39;secret&#39;</span><span class="p">)</span>
@@ -289,11 +298,11 @@ thumbnail: /images/privacy.png
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[17]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;https://plot.ly/~neda/6997?share_key=KLZpeiMaST2rqfEyqkP5ho&apos;</pre>
+<pre>u&apos;https://plot.ly/~neda/6997?share_key=KLZpeiMaST2rqfEyqkP5ho&apos;</pre>
 </div>
 
 </div>
@@ -313,7 +322,7 @@ thumbnail: /images/privacy.png
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[13]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">help</span><span class="p">(</span><span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">)</span>
