--- a/_posts/python/privacy/2015-04-09-privacy_python_index.html
+++ b/_posts/python/privacy/2015-04-09-privacy_python_index.html
@@ -1,7 +1,7 @@
 ---
 title: Python Public vs Private Graphs | Examples | Plotly
 name: Public vs Private Graphs
-<!--permalink: python/privacy/-->
+permalink: python/privacy/
 description: How to set the privacy settings of plotly graphs in python.
 layout: base
 thumbnail: /images/privacy.png
