don't introduce extend in getting started + sane fn

--- a/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -71,7 +71,7 @@ language: nodejs
 
             <pre><code>
 var data = [{x:[0,1,2], y:[3,2,1], type: 'bar'}];
-var layout = {fileopt : "extend", filename : "nodenodenode"};
+var layout = {fileopt : "overwrite", filename : "simple-node-example"};
 
 plotly.plot(data, layout, function (err, msg) {
 	if (err) return console.log(err);
