--- a/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
+++ b/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
@@ -14,13 +14,12 @@ order: 3
 
 Converting time series plots from MATLAB to plotly requires a few extra steps.
 
-Since MATLAB is extremely flexible with how the dates can be formatted within the X and Y tick labels, automatically parsing the various permutations of the date labels extremely difficult is impossible.
+Since MATLAB is extremely flexible with how the dates can be formatted within the X and Y tick labels, automatically parsing the various permutations of the date labels is nearly impossible.
 
-<!--
 
 <h4>Converting to a Standard Date Format</h4>
 
-The first way to convert MATLAB time series plots is to c
+The first way to convert MATLAB time series plots is to convert the dates to unix time with the <code>convertDate</code> function included in Plotly MATLAB toolbox.
 
 <ol>
     <li>
@@ -52,11 +51,10 @@ plotly(plotlyfig);
 </code></pre>
 </div>
 
--->
 
 <h4>Explicitly Setting the Date Format</h4>
 
-Convert MATLAB time series plots to Plotly by explicitly setting the date-time format.
+A second way to convert MATLAB time series plots to Plotly is by explicitly setting the date-time format.
 
 <ol>
     <li>
