--- a/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
+++ b/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
@@ -51,6 +51,7 @@ plotly(plotlyfig);
 </code></pre>
 </div>
 
+<iframe src="https://plot.ly/~jackp/10845.embed" width="100%" height="500px" style="border: none;"></iframe>
 
 <h4>Explicitly Setting the Date Format</h4>
 
@@ -79,6 +80,8 @@ set(gca,'UserData',userdata)
 p = fig2plotly(gcf);
 </code></pre>
 </div>
+
+<iframe src="https://plot.ly/~jackp/10871.embed" width="100%" height="500px" style="border: none;"></iframe>
 
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","time-series" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
