remove ipython notebook getting started until formatting is right

--- a/_posts/python/getting-started/2015-06-30-getting-started.html
+++ b/_posts/python/getting-started/2015-06-30-getting-started.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/getting-started
+permalink: python/getting-started-test
 description: Getting Started with Plotly for Python
 name: Getting Started Plotly for Python
 has_thumbnail: false
@@ -276,7 +276,7 @@ You can also create plotly graphs within an <strong>IPython notebook</strong>. L
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><strong>public</strong>: 
+<li><strong>public</strong>:
 <pre><code>  Anyone can view this graph. It will appear in your profile
   and can appear in search engines. You do not need to be
   logged in to Plotly to view this chart.</code></pre>
@@ -289,7 +289,7 @@ You can also create plotly graphs within an <strong>IPython notebook</strong>. L
   Plotly account and they will need to be logged in to
   view this plot.</code></pre>
 </li>
-<li><strong>secret</strong>: 
+<li><strong>secret</strong>:
 <pre><code>  Anyone with this secret link can view this chart. It will
   not appear in the Plotly feed, your profile, or search
   engines. If it is embedded inside a webpage or an IPython
@@ -372,7 +372,7 @@ You can also create plotly graphs within an <strong>IPython notebook</strong>. L
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre> 
+<div class=" highlight hl-ipython2"><pre>
 </pre></div>
 
 </div>
