--- a/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
+++ b/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
@@ -16,6 +16,7 @@ Converting time series plots from MATLAB to plotly requires a few extra steps.
 
 Since MATLAB is extremely flexible with how the dates can be formatted within the X and Y tick labels, automatically parsing the various permutations of the date labels is nearly impossible.
 
+Here are two options for plotting time series in MATLAB with Plotly.
 
 <h4>Converting to a Standard Date Format</h4>
 
@@ -23,17 +24,19 @@ The first way to convert MATLAB time series plots is to convert the dates to uni
 
 <ol>
     <li>
-        Convert your MATLAB time values to the “milliseconds from 1969” time format with <code>convertDate</code> below.
+        Convert your MATLAB time values to the "milliseconds from 1969" time format with <code>convertDate</code> below.
     </li>
-    <li>Run >> plotlyfig = fig2plotly(gcf) to parse your figure.</li>
+    <li>Run <code> &gt;&gt; plotlyfig = fig2plotly(gcf)</code> to parse your figure.</li>
     <li>
-        Modify the converted figure's date axes: <code>plotlyfig.layout.xaxis1.type = 'date';</code>(note: the xaxis1 might be xaxisN—> depending on the number of axes you have, where N is the id of the axis you wish to modify)
-    </li>
-    <li>
-        Run <code>&gt;&gt; plotlyfig.PlotOptions.FileOpt = 'overwrite';</code> (changing the file option to overwrite your newly created plot)
+        Modify the converted figure's date axes: <code>plotlyfig.layout.xaxis1.type = 'date';</code><br>Note: the xaxis1 might be xaxisN—> depending on the number of axes you have, where N is the id of the axis you wish to modify.
     </li>
     <li>
-        Run <code>&gt;&gt; plotly(plotlyfig);</code> to send your figure back to Plotly.
+        Change the file option to overwrite your newly created plot:<br>
+        <code>&gt;&gt; plotlyfig.PlotOptions.FileOpt = 'overwrite';</code>
+    </li>
+    <li>
+        Send your figure back to Plotly:<br>
+        <code>&gt;&gt; plotly(plotlyfig);</code>
     </li>
 </ol>
 
