change codepen iframe url from http to https

--- a/_posts/plotly_js/bar/2015-04-09-basic-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-basic-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Basic Bar Chart
-plot_url: http://codepen.io/plotly/embed/74a638752a41ac9672a05f628e4ddaff/?height=400&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/74a638752a41ac9672a05f628e4ddaff/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 1
