--- a/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Grouped Bar Chart
-plot_url: http://codepen.io/plotly/embed/79bf01113db127f234e92e5c535dbc43/?height=400&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/79bf01113db127f234e92e5c535dbc43/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 2
