--- a/_posts/plotly_js/bar/2015-07-08-colored-and-styled-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-07-08-colored-and-styled-bar-chart.html
@@ -1,6 +1,6 @@
 ---
 name: Colored and Styled Bar Chart
-plot_url: http://codepen.io/plotly/embed/327268d386f201e993c76f9796dac80b/?height=600&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/327268d386f201e993c76f9796dac80b/?height=600&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 9
