--- a/_posts/plotly_js/bar/2015-08-07-Rotated-bar-chart-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-Rotated-bar-chart-labels.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Chart with Direct Labels
-plot_url: http://codepen.io/plotly/embed/a60c8faee8044f8a25cfe3c7d7972176/?height=400&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/a60c8faee8044f8a25cfe3c7d7972176/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 6
