--- a/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
+++ b/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Chart with Hover Text
-plot_url: http://codepen.io/plotly/embed/da371864434af7c650e04288f0c276f0/?height=400&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/da371864434af7c650e04288f0c276f0/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 4
