--- a/_posts/plotly_js/colorscales/2015-04-09-Bluered-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Bluered-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Bluered Colorscale
-plot_url: http://codepen.io/plotly/embed/9d2bc88a52f02f52d1295fdb011b124a/?height=470&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/9d2bc88a52f02f52d1295fdb011b124a/?height=470&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
