--- a/_posts/plotly_js/colorscales/2015-04-09-Earth-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Earth-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Earth Colorscale
-plot_url: http://codepen.io/plotly/embed/68310682fbe5f74bf861057920149e78/?height=460&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/68310682fbe5f74bf861057920149e78/?height=460&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
