--- a/_posts/plotly_js/colorscales/2015-04-09-Greens-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Greens-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Greens Colorscale
-plot_url: http://codepen.io/plotly/embed/070b4617b2511ad0abed1f05c071f3bf/?height=450&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/070b4617b2511ad0abed1f05c071f3bf/?height=450&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
