--- a/_posts/plotly_js/colorscales/2015-04-09-Hot-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Hot-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Hot Colorscale
-plot_url: http://codepen.io/plotly/embed/ff7b1c6177de31c0fe3d0f3f03edc378/?height=462&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/ff7b1c6177de31c0fe3d0f3f03edc378/?height=462&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
