--- a/_posts/plotly_js/colorscales/2015-04-09-Portland-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Portland-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Portland Heatmap
-plot_url: http://codepen.io/plotly/embed/8cc45908171092b58bcf6e4a75afbd44/?height=445&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/8cc45908171092b58bcf6e4a75afbd44/?height=445&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
