--- a/_posts/plotly_js/colorscales/2015-04-09-YIOrRd-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-YIOrRd-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: YIOrRd Heatmap
-plot_url: http://codepen.io/plotly/embed/ed6cf2404500a112215c1014fa11def8/?height=498&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/ed6cf2404500a112215c1014fa11def8/?height=498&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
