--- a/_posts/plotly_js/colorscales/2015-04-09-custom-colorscale.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-custom-colorscale.html
@@ -1,6 +1,6 @@
 ---
 name: Custom Colorscale
-plot_url: http://codepen.io/plotly/embed/9efb95fa65755601b2eef3b9a749b91a/?height=455&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/9efb95fa65755601b2eef3b9a749b91a/?height=455&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 3
