--- a/_posts/plotly_js/colorscales/2015-08-10-discretized-heatmap-colorscale.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-discretized-heatmap-colorscale.html
@@ -1,6 +1,6 @@
 ---
 name: Custom Discretized Heatmap Colorscale
-plot_url: http://codepen.io/plotly/embed/6f68687ceba95ab0203f6fea2b45289c/?height=454&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/6f68687ceba95ab0203f6fea2b45289c/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 22
