--- a/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Annotated Heatmap
-plot_url: http://codepen.io/plotly/embed/ce7aa3866ba58c2b2d0b7034c40d2df3/?height=463&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/ce7aa3866ba58c2b2d0b7034c40d2df3/?height=463&theme-id=15263&default-tab=result
 language: plotly_js
 suite: heatmap
 order: 2
