--- a/_posts/plotly_js/horizontal-bar/2015-04-09-basic-horizontal-bar.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-basic-horizontal-bar.html
@@ -1,6 +1,6 @@
 ---
 name: Basic Horizontal Bar Chart
-plot_url: http://codepen.io/plotly/embed/d5a6d636cf0a98a10cf868f939714c8f/?height=455&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/d5a6d636cf0a98a10cf868f939714c8f/?height=455&theme-id=15263&default-tab=result
 language: plotly_js
 suite: horizontal-bar
 order: 0
