--- a/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
+++ b/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
@@ -1,6 +1,6 @@
 ---
 name: Colored Bar Chart
-plot_url: http://codepen.io/plotly/embed/604a70ed85d19943d29416a0b2e3a34e/?height=448&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/604a70ed85d19943d29416a0b2e3a34e/?height=448&theme-id=15263&default-tab=result
 language: plotly_js
 suite: horizontal-bar
 order: 1
