--- a/_posts/plotly_js/horizontal-bar/2015-08-11-barchart-with-line-plot.html
+++ b/_posts/plotly_js/horizontal-bar/2015-08-11-barchart-with-line-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Chart with Line Plot
-plot_url: http://codepen.io/plotly/embed/bd82bf5a1f5700ffaba7ff5da79d072a/?height=587&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/bd82bf5a1f5700ffaba7ff5da79d072a/?height=587&theme-id=15263&default-tab=result
 language: plotly_js
 suite: horizontal-bar
 order: 4
