--- a/_posts/plotly_js/line-plots/2015-08-07-Connect-gaps-between-data.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-Connect-gaps-between-data.html
@@ -1,6 +1,6 @@
 ---
 name: Connect Gaps Between Data
-plot_url: http://codepen.io/plotly/embed/3b2c65f44159a2d51012ace2d9d3f099/?height=553&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/3b2c65f44159a2d51012ace2d9d3f099/?height=553&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line-plots
 order: 12
