--- a/_posts/plotly_js/line_and_scatter/2015-08-10-data-label-hover.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-10-data-label-hover.html
@@ -1,6 +1,6 @@
 ---
 name: Data Labels Hover
-plot_url: http://codepen.io/plotly/embed/92507364403cfde53391469b6f78fd44/?height=454&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/92507364403cfde53391469b6f78fd44/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line_and_scatter
 order: 2
