--- a/_posts/plotly_js/line_and_scatter/2015-08-11-categorical-dot-plot.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-11-categorical-dot-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Categorical Dot Plot
-plot_url: http://codepen.io/plotly/embed/99b8a3ab350988de71f76ff8f28520bb/?height=617&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/99b8a3ab350988de71f76ff8f28520bb/?height=617&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line_and_scatter
 order: 5
