--- a/_posts/plotly_js/line_and_scatter/2015-08-11-data-label-on-the-plot.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-11-data-label-on-the-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Data Labels on The Plot
-plot_url: http://codepen.io/plotly/embed/5e0a2adf9313c0f4ad5a8e9ce665f726/?height=460&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/5e0a2adf9313c0f4ad5a8e9ce665f726/?height=460&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line_and_scatter
 order: 3
