--- a/_posts/plotly_js/line_and_scatter/2015-08-11-scater-with-color-dimension.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-11-scater-with-color-dimension.html
@@ -1,6 +1,6 @@
 ---
 name: Scatter Plot with a Color Dimension
-plot_url: http://codepen.io/plotly/embed/e4fc2ab3ca05d561522cb374bb0ee022/?height=458&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/e4fc2ab3ca05d561522cb374bb0ee022/?height=458&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line_and_scatter
 order: 4
