--- a/_posts/plotly_js/time-series/2015-04-09-date-axes.html
+++ b/_posts/plotly_js/time-series/2015-04-09-date-axes.html
@@ -1,6 +1,6 @@
 ---
 name: Date Strings
-plot_url: http://codepen.io/plotly/embed/b2233edcd3d97500db0a2ade7b2cbdf0/?height=443&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/b2233edcd3d97500db0a2ade7b2cbdf0/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: time-series
 order: 1
