--- a/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
@@ -1,6 +1,6 @@
 ---
 name: Customizing In'myDiv'ual Bar Colors
-plot_url: http://codepen.io/plotly/embed/4f14500e8ce23a9b39cd100ccc59425d/?height=400&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/4f14500e8ce23a9b39cd100ccc59425d/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 7
