--- a/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
@@ -1,6 +1,6 @@
 ---
 name: Waterfall Bar Chart
-plot_url: http://codepen.io/plotly/embed/e7f6bbe0a1cc2516f6871194f750e51b/?height=591&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/e7f6bbe0a1cc2516f6871194f750e51b/?height=591&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
 order: 10
