--- a/_posts/plotly_js/colorscales/2015-04-09-Electric-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Electric-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Electric Colorscale
-plot_url: http://codepen.io/plotly/embed/6538a10f7a7c9bd75856f63b26c33864/?height=456&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/6538a10f7a7c9bd75856f63b26c33864/?height=456&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
