--- a/_posts/plotly_js/colorscales/2015-04-09-Jet-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-Jet-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Jet Colorscale
-plot_url: http://codepen.io/plotly/embed/e2f668efe86934c61c4937ec139f088d/?height=454&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/e2f668efe86934c61c4937ec139f088d/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
