--- a/_posts/plotly_js/colorscales/2015-04-09-RdBu-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-RdBu-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: RdBu Colorscale
-plot_url: http://codepen.io/plotly/embed/9bacae3d4d3eeef19c30f215b26faee0/?height=445&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/9bacae3d4d3eeef19c30f215b26faee0/?height=445&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
