--- a/_posts/plotly_js/colorscales/2015-04-09-YIGnBu-heatmap.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-YIGnBu-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: YIGnBu Colorscale
-plot_url: http://codepen.io/plotly/embed/c09f66e0f2b3f3b8215b8e90edc106c3/?height=475&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/c09f66e0f2b3f3b8215b8e90edc106c3/?height=475&theme-id=15263&default-tab=result
 language: plotly_js
 suite: colorscales
 order: 16
