--- a/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Styling Line Plot
-plot_url: http://codepen.io/plotly/embed/59e3b8f12dc9cc54cc3c018909ecd7df/?height=536&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/59e3b8f12dc9cc54cc3c018909ecd7df/?height=536&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line-plots
 order: 7
