--- a/_posts/pandas/line_and_scatter/2015-05-19-4scatter-with-cufflinks.html
+++ b/_posts/pandas/line_and_scatter/2015-05-19-4scatter-with-cufflinks.html
@@ -20,3 +20,5 @@ df = pd.read_csv('http://www.stat.ubc.ca/~jenny/notOcto/STAT545A/examples/gapmin
 df2007 = df[df.year==2007]
 df1952 = df[df.year==1952]
 df.head(2)
+
+df2007.iplot(kind='scatter', mode='markers', x='gdpPercap', y='lifeExp', filename='cufflinks/simple-scatter')
