--- a/_posts/python/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/python/callbacks-buttons/2015-04-09-button-bind.html
@@ -1,6 +1,6 @@
 ---
 name: Bind button events to Python charts in JavaScript
-plot_url: https://codepen.io/plotly/embed/OVrbVY/?height=770&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/zGXbXj/?height=770&theme-id=15263&default-tab=result
 height: 850
 language: python
 suite: button-events
@@ -10,23 +10,9 @@ order: 0
 ---
 import plotly.plotly as py
 from plotly.graph_objs import *
+import pandas as pd
+df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv')
 
-import numpy as np
+data = Data([Heatmap( z=df.values.tolist(), colorscale='Viridis' )])
 
-size = 100
-x = np.linspace(-2*np.pi, 2*np.pi, size)
-y = np.linspace(-2*np.pi, 2*np.pi, size)
-z = np.empty((size, size))
-for i, xi in enumerate(x):
-    for j, yj in enumerate(y):
-        r2 = (xi**2+yj**2)
-        z[i][j] = np.sin(xi)*np.cos(yj)*np.sin(r2)/(np.log(r2+1))
-
-data = Data([
-    Contour(
-        z=z,
-        x=x,
-        y=y
-    )
-])
-plot_url = py.plot(data, filename='simple-contour')
+py.iplot(data, filename='pandas-heatmap')
