--- a/_posts/python/callbacks-hover/2015-04-09-hover-bind.html
+++ b/_posts/python/callbacks-hover/2015-04-09-hover-bind.html
@@ -1,7 +1,7 @@
 ---
 name: Capturing Hover Events
-plot_url: https://codepen.io/plotly/embed/aOPGYm/?height=550&theme-id=15263&default-tab=result
-height: 600
+plot_url: https://codepen.io/plotly/embed/aOPGYm/?height=800&theme-id=15263&default-tab=result
+height: 800
 language: python
 suite: hover-events
 arrangement: horizontal
@@ -11,7 +11,7 @@ order: 0
 
 import plotly.plotly as py
 from plotly.graph_objs import *
-py.sign_in('username', 'api_key')
+
 data = Data([
     Bar(
         x=['Bob Dylan', 'The Beatles', 'David Bowie', 'Randy Newman', 'The Rolling Stones', 'Madonna', 'Frank Sinatra', 'The Beach Boys', 'Marvin Gaye', 'Prince', 'The Kinks', 'Elvis Presley', 'Tom Waits', 'U2', 'The Clash', 'Johnny Cash', 'Kate Bush', 'The Supremes', 'The Smiths', 'Al Green', 'Pulp', 'Chuck Berry', 'Elvis Costello and the Attractions', 'Neil Young', 'Stevie Wonder', 'Ray Charles', 'The Pogues', 'Grace Jones', 'Bill Withers', 'The Who', 'Paul Simon', 'Roy Orbison', 'Arctic Monkeys', 'Bruce Springsteen', 'The Police', 'Rod Stewart', 'Steve Earle'],
@@ -22,32 +22,12 @@ data = Data([
         )
     )
 ])
+
 layout = Layout(
-    title="Number of songs listed in the Guardian's<br><em>Top 1,000 Songs to Hear Before You Die</em> per artist with 4 or more songs",
+    title="Number of songs listed in the Guardian's&lt;br&gt;&lt;em&gt;Top 1,000 Songs to Hear Before You Die&lt;/em&gt; per artist with 4 or more songs",
     font=Font(
         family='Georgia, serif',
         color='#635F5D'
-    ),
-    showlegend=False,
-    autosize=False,
-    width=700,
-    height=500,
-    xaxis=XAxis(
-        title='',
-        ticks='outside',
-        ticklen=8,
-        tickwidth=1.5,
-        tickangle=45
-    ),
-    yaxis=YAxis(
-        title='Number of songs per artist',
-        ticks='outside',
-        ticklen=8,
-        tickwidth=1.5,
-        gridcolor='#FFFFFF'
-    ),
-    margin=Margin(
-        b=140
     ),
     plot_bgcolor='#EFECEA'
 )
