--- a/_posts/python/callbacks-zoom/2015-04-09-zoom-bind.html
+++ b/_posts/python/callbacks-zoom/2015-04-09-zoom-bind.html
@@ -8,44 +8,18 @@ suite: zoom-events
 sitemap: false
 order: 0
 ---
-# Learn about API authentication here: https://plot.ly/python/getting-started
-# Find your api_key here: https://plot.ly/settings/api
+# Cufflinks binds plotly to pandas dataframes in IPython notebook.
 
 import plotly.plotly as py
-from plotly.graph_objs import *
+import cufflinks as cf
+import pandas as pd
 
-trace0 = Scatter(
-    x=[1, 2, 3, 4, 5],
-    y=[1, 6, 3, 6, 1],
-    mode='markers',
-    name='Team A',
-    text=['A-1', 'A-2', 'A-3', 'A-4', 'A-5'],
-    marker=Marker(
-        size=12,
-    )
-)
-trace1 = Scatter(
-    x=[1.5, 2.5, 3.5, 4.5, 5.5],
-    y=[4, 1, 7, 1, 4],
-    mode='markers',
-    name='Team B',
-    text=['B-a', 'B-b', 'B-c', 'B-d', 'B-e'],
-    marker=Marker(
-        size=12,
-    )
-)
-data = Data([trace0, trace1])
-layout = Layout(
+cf.set_config_file(offline=False, world_readable=True, theme='pearl')
 
-    xaxis=XAxis(
-        range=[0.75, 5.25],
-        autorange=False,
-    ),
+df = pd.read_csv('http://www.stat.ubc.ca/~jenny/notOcto/STAT545A/examples/gapminder/data/gapminderDataFiveYear.txt', sep='\t')
+df2007 = df[df.year==2007]
+df.head(2)
 
-    yaxis=YAxis(
-        range=[0, 8],
-        autorange=False,
-    ),
-)
-fig = Figure(data=data, layout=layout)
-plot_url = py.plot(fig, filename='text-hover')
+df2007.iplot(kind='bubble', x='gdpPercap', y='lifeExp', size='pop', text='country',
+             xTitle='GDP per Capita', yTitle='Life Expectancy',
+             filename='cufflinks/simple-bubble-chart')
