--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -12,6 +12,7 @@ language: python
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
 		<a href="/python/ipython-notebooks/" class="button no_underline">IPython Notebooks</a>
+		<a href="/pandas/" class="button no_underline">Pandas</a>		
 		<a href="https://plot.ly/python/reference/" class="button no_underline">Reference</a>
 	</div>
 
