--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -10,7 +10,7 @@ language: pandas
 <h1 class="centered shiftup">Plotly Python Library for Pandas</h1>
 	<div class="row centered btnrow">
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/python/user-guide/" class="button no_underline">Cufflinks User Guide</a>
+		<a href="/ipython-notebooks/cufflinks/" class="button no_underline">Cufflinks User Guide</a>
 		<a href="/python/ipython-notebooks/" class="button no_underline">IPython Notebooks</a>
 		<a href="https://plot.ly/python/reference/" class="button no_underline">Reference</a>
 	</div>
