--- a/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
+++ b/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
@@ -24,7 +24,7 @@ import plotly.plotly as py
 mpl_fig = plt.figure()
 # --> your matplotlib methods <--
 
-unique_url = py.plot_mpl(mpl_fig, filename="plotly version of an mpl figure')</code></pre>
+unique_url = py.plot_mpl(mpl_fig, filename="plotly version of an mpl figure")</code></pre>
 
             <p >
                 Alternatively, convert matplotlib figures into Plotly figure objects with <code class="no-padding">mpl_to_plotly</code>:
