--- a/_posts/python/marketplace-dashboards/2015-08-11-demand-side-kpi-metrics-dashboard-index.html
+++ b/_posts/python/marketplace-dashboards/2015-08-11-demand-side-kpi-metrics-dashboard-index.html
@@ -1,6 +1,6 @@
 ---
 title: Demand Side KPI Metrics Dashboard
-name: Demand Side KPI Metrics Dashboard
+name: Demand Side Metrics
 permalink: python/dashboard/demand-side-kpi-metrics
 description: Dashboard of Demand Side metrics created and updated with Python
 language: python
@@ -11,38 +11,12 @@ order: 0
 ---
 <!DOCTYPE html>
 <!-- saved from url=(0053)http://keen.github.io/dashboards/layouts/hero-thirds/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./Layouts » Hero-Thirds/jsapi"></script>
-  <title>Demand Side Metrics</title>
-  <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" />
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/keen-dashboards.css">
-<style type="text/css"></style><style id="holderjs-style" type="text/css"></style><script type="text/javascript" src="{{site.staticurl}}/javascripts/saved_resource"></script><link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet"><script type="text/javascript" src="{{site.staticurl}}/javascripts/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script></head>
-<body class="application">
+<html><head>
+  {% include seo.html %}
 
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="./marketplace-kpi-metrics-dashboard.html">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="navbar-brand" >Marketplace KPI Dashboard - Demand Side Metrics</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-          <li><a href="/python/dashboard/marketplace-kpi-metrics">Summary Metrics</a></li>
-          <li><a href="/python/dashboard/supply-side-kpi-metrics">Supply Side Metrics</a></li>
-          <li><a href="/python/dashboard/demand-side-kpi-metrics">Demand Side Metrics</a></li>
-          <li><a href="/python/dashboard/mashup-kpi-metrics">Mashup Metrics</a></li>
-      </div>
-    </div>
-  </div>
+  {% include marketplace-dashboard-nav.html %}
 
+  {% include marketplace-header.html %}
 
   <div class="container-fluid">
 
@@ -54,13 +28,21 @@ order: 0
           </div>
           <div class="chart-stage">
             <div id="grid-1-1">
+              <div class="control-box">
+                <label>Moving average</label>
+                <br>
+                <button id="toggleAverage" class="btn btn-default" onclick="toggleAvg()" disabled>Toggle</button>
+                <input type="range" id="myRange" value="2" min="1" max="20" onchange="applyAvg();" />
+                <span id="window">2</span>
+              </div>
               <iframe
+                id="plot1"
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1441/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10926/total-buyers-vs-time.embed?width=100%&height=480"
                 ></iframe>
 
             </div>
@@ -76,13 +58,19 @@ order: 0
             MoM and YoY Buyer Growth
           </div>
           <div class="chart-stage">
+            <div class="control-box">
+              <button type="button" class="btn btn-default" onclick="changeType('scatter');">Line</button>
+              <button type="button" class="btn btn-default" onclick="changeType('bar');">Bar</button>
+              <button type="button" class="btn btn-default" onclick="changeType('error');">% Error</button>
+            </div>            
             <iframe
+                id="plot2"
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1431/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10933/mom-buyer-growth-vs-yoy-buyer-growth.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -105,7 +93,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1433/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10945/gmv-vs-time.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -126,7 +114,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1435/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10949/vs-time.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -148,7 +136,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1439/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10959.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -168,7 +156,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1437/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/10963.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -177,22 +165,6 @@ order: 0
         </div>
       </div>
 
-    <hr>
-
-    <p class="small text-muted">Dashboard Template from: <a href="http://keen.github.io/dashboards/layouts/">Keen IO</a><br />Charting: <a href="https://plot.ly/">Plot.ly</a></p>
-
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/slider/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/holderjs/holder.js"></script>
-  <script>
-    Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
-  </script>
-
-  <script type="text/javascript" src="{{site.staticurl}}/js/keen.min.js"></script>
-  <script type="text/javascript" src="{{site.staticurl}}/js/meta.js"></script>
-
-
+{% include marketplace-footer.html %}
 
 </body></html>
