--- a/_posts/python/marketplace-dashboards/2015-08-11-marketplace-kpi-metrics-dashboard-index.html
+++ b/_posts/python/marketplace-dashboards/2015-08-11-marketplace-kpi-metrics-dashboard-index.html
@@ -1,6 +1,6 @@
 ---
 title: Marketplace KPI Metrics Dashboard
-name: Marketplace KPI Metrics Dashboard
+name: Summary Metrics
 permalink: python/dashboard/marketplace-kpi-metrics
 description: Dashboard of Marketplace KPI metrics created and updated with Python
 language: python
@@ -11,37 +11,12 @@ order: 0
 ---
 <!DOCTYPE html>
 <!-- saved from url=(0053)http://keen.github.io/dashboards/layouts/hero-thirds/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./Layouts » Hero-Thirds/jsapi"></script>
-  <title>Marketplace KPI Dashboard</title>
-  <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" />
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/keen-dashboards.css">
-<style type="text/css"></style><style id="holderjs-style" type="text/css"></style><script type="text/javascript" src="{{site.staticurl}}/javascripts/saved_resource"></script><link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet"><script type="text/javascript" src="{{site.staticurl}}/javascripts/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script></head>
-<body class="application">
+<html><head> 
+  {% include seo.html %}
 
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="./marketplace-kpi-metrics-dashboard.html">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="navbar-brand" >Marketplace KPI Dashboard - Summary Metrics</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-          <li><a href="/python/dashboard/marketplace-kpi-metrics">Summary Metrics</a></li>
-          <li><a href="/python/dashboard/supply-side-kpi-metrics">Supply Side Metrics</a></li>
-          <li><a href="/python/dashboard/demand-side-kpi-metrics">Demand Side Metrics</a></li>
-          <li><a href="/python/dashboard/mashup-kpi-metrics">Mashup Metrics</a></li>
-      </div>
-    </div>
-  </div>
+  {% include marketplace-header.html %}
+
+  {% include marketplace-dashboard-nav.html %}
 
   <div class="container-fluid">
 
@@ -53,13 +28,21 @@ order: 0
           </div>
           <div class="chart-stage">
             <div id="grid-1-1">
+              <div class="control-box">
+                <label>Moving average</label>
+                <br>
+                <button id="toggleAverage" class="btn btn-default" onclick="toggleAvg()" disabled>Toggle</button>
+                <input type="range" id="myRange" value="2" min="1" max="20" onchange="applyAvg();" />
+                <span id="window">2</span>
+              </div>            
               <iframe
+                id="plot1"              
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1493/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11016/.embed?width=100%&height=480"
                 ></iframe>
 
             </div>
@@ -74,14 +57,15 @@ order: 0
           <div class="chart-title">
             Transaction Volume and Average Order Value (AOV)
           </div>
-          <div class="chart-stage">
+          <div class="chart-stage">         
             <iframe
+                id="plot2"            
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1449/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11020/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -104,7 +88,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1451/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11024/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -124,7 +108,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1457/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11028.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -144,7 +128,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1453/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11032.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -165,7 +149,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1455/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11042/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -185,7 +169,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1459/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11046/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -205,7 +189,7 @@ order: 0
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1461/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11050/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -214,18 +198,6 @@ order: 0
         </div>
       </div>
 
-
-    <hr>
-
-    <p class="small text-muted">Dashboard Template from: <a href="http://keen.github.io/dashboards/layouts/">Keen IO</a><br />Charting: <a href="https://plot.ly/">Plot.ly</a></p>
-
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/slider/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/holderjs/holder.js"></script>
-  <script>
-    Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
-  </script>
+{% include marketplace-footer.html %}
 
 </body></html>
