--- a/_posts/python/marketplace-dashboards/2015-08-11-mashup-kpi-metrics-dashboard-index.html
+++ b/_posts/python/marketplace-dashboards/2015-08-11-mashup-kpi-metrics-dashboard-index.html
@@ -1,6 +1,6 @@
 ---
 title: Mashup KPI Metrics Dashboard
-name: Mashup KPI Metrics Dashboard
+name: Mashup Metrics
 permalink: python/dashboard/mashup-kpi-metrics
 description: Mashup dashboard of business intelligence metrics created and updated with Python
 language: python
@@ -12,42 +12,12 @@ order: 0
 <!DOCTYPE html>
 <!-- saved from url=(0053)http://keen.github.io/dashboards/layouts/hero-thirds/ -->
 <html>
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./Layouts » Hero-Thirds/jsapi"></script>
-  <title>Mashup Metrics</title>
-  <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" />
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/keen-dashboards.css">
-  <style type="text/css"></style>
-  <style id="holderjs-style" type="text/css"></style>
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/saved_resource"></script>
-  <link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet">
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script>
-  </head>
-<body class="application">
+<head>
+  {% include seo.html %}
 
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="./marketplace-kpi-metrics-dashboard.html">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="navbar-brand" >Marketplace KPI Dashboard - Mashup Metrics</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-          <li><a href="/python/dashboard/marketplace-kpi-metrics">Summary Metrics</a></li>
-          <li><a href="/python/dashboard/supply-side-kpi-metrics">Supply Side Metrics</a></li>
-          <li><a href="/python/dashboard/demand-side-kpi-metrics">Demand Side Metrics</a></li>
-          <li><a href="/python/dashboard/mashup-kpi-metrics">Mashup Metrics</a></li>
-      </div>
-    </div>
-  </div>
+  {% include marketplace-dashboard-nav.html %}
+
+  {% include marketplace-header.html %}
 
   <div class="container-fluid">
 
@@ -58,14 +28,14 @@ order: 0
             Buyer and Seller NPS
           </div>
           <div class="chart-stage">
-            <div id="grid-1-1">
+            <div id="grid-1-1">           
               <iframe
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1443/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11058/.embed?width=100%&height=480"
                 ></iframe>
 
             </div>
@@ -80,14 +50,15 @@ order: 0
           <div class="chart-title">
             GMV Growth Relative to Buyer and Supplier Growth
           </div>
-          <div class="chart-stage">
+          <div class="chart-stage">          
             <iframe
+                id="plot1"            
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1445/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11062/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -105,12 +76,13 @@ order: 0
           </div>
           <div class="chart-stage">
             <iframe
+                id="plot2"            
                 width="100%"
                 height="480"
                 frameborder="0"
                 seamless="seamless"
                 scrolling="no"
-                src="https://plot.ly/~vijayn/1447/.embed?width=100%&height=480"
+                src="https://plot.ly/~jackp/11066/.embed?width=100%&height=480"
                 ></iframe>
           </div>
           <div class="chart-notes">
@@ -119,23 +91,6 @@ order: 0
         </div>
       </div>
 
-
-    <hr>
-
-    <p class="small text-muted">Dashboard Template from: <a href="http://keen.github.io/dashboards/layouts/">Keen IO</a><br />Charting: <a href="https://plot.ly/">Plot.ly</a></p>
-
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/slider/jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript" src="{{site.staticurl}}/javascripts/holderjs/holder.js"></script>
-  <script>
-    Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
-  </script>
-
-  <script type="text/javascript" src="{{site.staticurl}}/js/keen.min.js"></script>
-  <script type="text/javascript" src="{{site.staticurl}}/js/meta.js"></script>
-
-
+{% include marketplace-footer.html %}
 
 </body></html>
