horizontal display for codepen

--- a/_posts/plotly_js/area/2015-04-09-stacked-area.html
+++ b/_posts/plotly_js/area/2015-04-09-stacked-area.html
@@ -5,7 +5,7 @@ language: plotly_js
 suite: area
 order: 2
 sitemap: false
-
+arrangement: horizontal
 ---
 var plotDiv = document.getElementById("plot");
 var traces = [
