--- a/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: bar
 order: 7
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   x: ['Feature A', 'Feature B', 'Feature C', 'Feature D', 'Feature E'],
