--- a/_posts/plotly_js/bar/2015-04-09-stacked-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-stacked-bar.html
@@ -5,7 +5,7 @@ language: plotly_js
 suite: bar
 order: 3
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: ['giraffes', 'orangutans', 'monkeys'],
