--- a/_posts/plotly_js/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/plotly_js/callbacks-buttons/2015-04-09-button-bind.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: button-events
 sitemap: false
 order: 0
+arrangement: horizontal
 ---
 var y1 = d3.range(100).map(d3.random.normal(6)),
     y2 = d3.range(100).map(d3.random.normal(9)),
@@ -25,8 +26,8 @@ $('.hideshow button').click(function(){
         data_index = ( btn_id === 'top' ) ? 0 : 1,
         myDiv = document.getElementById("myDiv"),
         visible = myDiv.data[data_index].visible;
-  
+
     if( visible === undefined ) visible = true;
-  
+
     Plotly.restyle("myDiv", 'visible', !visible, data_index);
 });
