--- a/_posts/plotly_js/line_and_scatter/2015-08-10-data-label-hover.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-10-data-label-hover.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: line_and_scatter
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   x: [1, 2, 3, 4, 5],
