--- a/_posts/plotly_js/line_and_scatter/2015-08-11-categorical-dot-plot.html
+++ b/_posts/plotly_js/line_and_scatter/2015-08-11-categorical-dot-plot.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: line_and_scatter
 order: 5
 sitemap: false
+arrangement: horizontal
 ---
 var country = ['Switzerland (2011)', 'Chile (2013)', 'Japan (2014)', 'United States (2012)', 'Slovenia (2014)', 'Canada (2011)', 'Poland (2010)', 'Estonia (2015)', 'Luxembourg (2013)', 'Portugal (2011)'];
 
