--- a/_posts/plotly_js/mixed/2015-04-09-bar-line.html
+++ b/_posts/plotly_js/mixed/2015-04-09-bar-line.html
@@ -5,7 +5,7 @@ language: plotly_js
 suite: mixed
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5],
