--- a/_posts/plotly_js/shapes/2015-08-10-tangent-lines-with-shapes.html
+++ b/_posts/plotly_js/shapes/2015-08-10-tangent-lines-with-shapes.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: shape
 order: 10
 sitemap: false
+arrangement: horizontal
 ---
 
 var xValues = numeric.linspace(1, 3, 200);
