--- a/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: bar
 order: 5
 sitemap: false
+arrangement: horizontal
 ---
 
 var xValue = ['Product A', 'Product B', 'Product C'];
