--- a/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: heatmap
 order: 2
 sitemap: false
+arrangement: horizontals
 ---
 var xValues = ['A', 'B', 'C', 'D', 'E'];
 
