--- a/_posts/plotly_js/horizontal-bar/2015-08-11-barchart-with-line-plot.html
+++ b/_posts/plotly_js/horizontal-bar/2015-08-11-barchart-with-line-plot.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: horizontal-bar
 order: 4
 sitemap: false
+arrangement: horizontal
 ---
 var xSavings = [1.3586, 2.2623000000000002, 4.9821999999999997, 6.5096999999999996,
   7.4812000000000003, 7.5133000000000001, 15.2148, 17.520499999999998
