--- a/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
+++ b/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: line-plots
 order: 8
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   x: [1, 2, 3, 4, 5],
