--- a/_posts/plotly_js/pie/2015-08-10-pie-chart-subplots.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie-chart-subplots.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: pie
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 
 var allLabels = ['1st', '2nd', '3rd', '4th', '5th'];
