--- a/_posts/plotly_js/polar/2015-04-09-polar-line.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar-line.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: polar
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 var trace1 = {
   r: [1, 0.995, 0.978, 0.951, 0.914, 0.866, 0.809, 0.743, 0.669, 0.588, 0.5, 0.407, 0.309, 0.208, 0.105, 0, 0.105, 0.208, 0.309, 0.407, 0.5, 0.588, 0.669, 0.743, 0.809, 0.866, 0.914, 0.951, 0.978, 0.995, 1, 0.995, 0.978, 0.951, 0.914, 0.866, 0.809, 0.743, 0.669, 0.588, 0.5, 0.407, 0.309, 0.208, 0.105, 0, 0.105, 0.208, 0.309, 0.407, 0.5, 0.588, 0.669, 0.743, 0.809, 0.866, 0.914, 0.951, 0.978, 0.995, 1],
