--- a/_posts/plotly_js/shapes/2015-06-17-shape-clusters.html
+++ b/_posts/plotly_js/shapes/2015-06-17-shape-clusters.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: shape
 order: 1
 sitemap: false
+arrangement: horizontal
 ---
 
 function normal_array( mean, stddev, size ){
