--- a/_posts/plotly_js/annotations/2015-04-09-text-chart-styling.html
+++ b/_posts/plotly_js/annotations/2015-04-09-text-chart-styling.html
@@ -1,6 +1,6 @@
 ---
 name: Custom Text Color and Styling
-plot_url: https://plot.ly/~PlotBot/43
+plot_url: https://codepen.io/plotly/embed/ceb4d890031e234ef526b88669be927b/?height=450&theme-id=15263&default-tab=result
 language: plotly_js
 suite: annotations
 order: 5
@@ -10,31 +10,31 @@ arrangement: horizontal
 var trace1 = {
   x: [0, 1, 2],
   y: [1, 1, 1],
-  mode: "lines+markers+text",
-  name: "Lines, Markers and Text",
-  text: ["Text A", "Text B", "Text C"],
-  textposition: "top right",
+  mode: 'lines+markers+text',
+  name: 'Lines, Markers and Text',
+  text: ['Text A', 'Text B', 'Text C'],
+  textposition: 'top right',
   textfont: {
-    family: "sans serif",
+    family: 'sans serif',
     size: 18,
-    color: "#1f77b4"
+    color: '#1f77b4'
   },
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2],
   y: [2, 2, 2],
-  mode: "lines+markers+text",
-  name: "Lines and Text",
-  text: ["Text G", "Text H", "Text I"],
-  textposition: "bottom",
+  mode: 'lines+markers+text',
+  name: 'Lines and Text',
+  text: ['Text G', 'Text H', 'Text I'],
+  textposition: 'bottom',
   textfont: {
-    family: "sans serif",
+    family: 'sans serif',
     size: 18,
-    color: "#ff7f0e"
+    color: '#ff7f0e'
   },
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {showlegend: false};
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
