--- a/_posts/plotly_js/axes/2015-04-09-axes-booleans.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-booleans.html
@@ -1,6 +1,6 @@
 ---
 name: Toggling Axes Lines, Ticks, Labels, and Autorange
-plot_url: https://plot.ly/~PlotBot/4
+plot_url: https://codepen.io/plotly/embed/ebcceb63d324df0f1208dd646be7767e/?height=496&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
@@ -10,12 +10,12 @@ arrangement: horizontal
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [8, 7, 6, 5, 4, 3, 2, 1, 0],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
@@ -25,7 +25,7 @@ var layout = {
     zeroline: false,
     showline: false,
     autotick: true,
-    ticks: "",
+    ticks: '',
     showticklabels: false
   },
   yaxis: {
@@ -34,8 +34,8 @@ var layout = {
     zeroline: false,
     showline: false,
     autotick: true,
-    ticks: "",
+    ticks: '',
     showticklabels: false
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
