--- a/_posts/plotly_js/axes/2015-04-09-axes-reversed.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-reversed.html
@@ -1,18 +1,18 @@
 ---
 name: Reversed Axes
-plot_url: https://plot.ly/~PlotBot/8
+plot_url: https://codepen.io/plotly/embed/c32ab38cee36aa687e7f88071536f6e3/?height=508&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var data = [
   {
     x: [1, 2],
     y: [1, 2],
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-var layout = {xaxis: {autorange: "reversed"}};
-Plotly.plot("myDiv", data, layout);
+var layout = {xaxis: {autorange: 'reversed'}};
+Plotly.newPlot('myDiv', data, layout);
