--- a/_posts/plotly_js/legends/2015-04-09-legend-outside.html
+++ b/_posts/plotly_js/legends/2015-04-09-legend-outside.html
@@ -1,21 +1,21 @@
 ---
 name: Positioning the Legend Outside the Plot
-plot_url: https://plot.ly/~PlotBot/16
+plot_url: https://codepen.io/plotly/embed/a2f0fdfa6b267c1d501b6afee02aec42/?height=503&theme-id=15263&default-tab=result
 language: plotly_js
 suite: legends
 order: 6
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 3, 6, 4, 5, 2, 3, 5, 4],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 4, 7, 8, 3, 6, 3, 3, 4],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
@@ -25,4 +25,4 @@ var layout = {
     y: 1
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
