--- a/_posts/plotly_js/sizing/2015-04-09-size-margins.html
+++ b/_posts/plotly_js/sizing/2015-04-09-size-margins.html
@@ -1,17 +1,17 @@
 ---
 name: Adjusting Height, Width, and Margins
-plot_url: https://plot.ly/~PlotBot/2
+plot_url: https://codepen.io/plotly/embed/d95d2a23557d70bd79a6cacb08e57186/?height=538&theme-id=15263&default-tab=result
 language: plotly_js
 suite: sizing
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var data = [
   {
     x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
     y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-    type: "scatter"
+    type: 'scatter'
   }
 ];
 var layout = {
@@ -25,7 +25,7 @@ var layout = {
     t: 100,
     pad: 4
   },
-  paper_bgcolor: "#7f7f7f",
-  plot_bgcolor: "#c7c7c7"
+  paper_bgcolor: '#7f7f7f',
+  plot_bgcolor: '#c7c7c7'
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
