--- a/_posts/plotly_js/annotations/2015-04-09-hover-chart-basic.html
+++ b/_posts/plotly_js/annotations/2015-04-09-hover-chart-basic.html
@@ -1,6 +1,6 @@
 ---
 name: Adding Hover Text to Data in Line and Scatter Plots
-plot_url: https://plot.ly/~PlotBot/186
+plot_url: https://codepen.io/plotly/embed/232bdaa72854c67f8a4360538b5c7378/?height=509&theme-id=15263&default-tab=result
 language: plotly_js
 suite: annotations
 order: 2
@@ -11,10 +11,10 @@ var data = [
   {
     x: [0, 1, 2],
     y: [1, 3, 2],
-    mode: "markers",
-    text: ["Text A", "Text B", "Text C"],
-    type: "scatter"
+    mode: 'markers',
+    text: ['Text A', 'Text B', 'Text C'],
+    type: 'scatter'
   }
 ];
-var layout = {title: "Hover over the points to see the text"};
-Plotly.plot("myDiv", data, layout);
+var layout = {title: 'Hover over the points to see the text'};
+Plotly.newPlot('myDiv', data, layout);
