--- a/_posts/plotly_js/annotations/2015-04-09-multiple-annotation.html
+++ b/_posts/plotly_js/annotations/2015-04-09-multiple-annotation.html
@@ -1,6 +1,6 @@
 ---
 name: Multiple Annotations
-plot_url: https://plot.ly/~PlotBot/20
+plot_url: https://codepen.io/plotly/embed/d34df205912a41ffd1b9dd79867cdd53/?height=493&theme-id=15263&default-tab=result
 language: plotly_js
 suite: annotations
 order: 4
@@ -10,12 +10,12 @@ arrangement: horizontal
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 3, 2, 4, 3, 4, 6, 5],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 4, 5, 1, 2, 2, 3, 4, 2],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
@@ -24,9 +24,9 @@ var layout = {
     {
       x: 2,
       y: 5,
-      xref: "x",
-      yref: "y",
-      text: "Annotation Text",
+      xref: 'x',
+      yref: 'y',
+      text: 'Annotation Text',
       showarrow: true,
       arrowhead: 7,
       ax: 0,
@@ -35,9 +35,9 @@ var layout = {
     {
       x: 4,
       y: 4,
-      xref: "x",
-      yref: "y",
-      text: "Annotation Text 2",
+      xref: 'x',
+      yref: 'y',
+      text: 'Annotation Text 2',
       showarrow: true,
       arrowhead: 7,
       ax: 0,
@@ -45,4 +45,4 @@ var layout = {
     }
   ]
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
