--- a/_posts/plotly_js/annotations/2015-04-09-style-annotation.html
+++ b/_posts/plotly_js/annotations/2015-04-09-style-annotation.html
@@ -1,6 +1,6 @@
 ---
 name: Styling and Coloring Annotations
-plot_url: https://plot.ly/~PlotBot/21
+plot_url: https://codepen.io/plotly/embed/46073b3070c26d0f406ea5bdf533c8b3/?height=490&theme-id=15263&default-tab=result
 language: plotly_js
 suite: annotations
 order: 6
@@ -10,12 +10,12 @@ arrangement: horizontal
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 3, 2, 4, 3, 4, 6, 5],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 4, 5, 1, 2, 2, 3, 4, 2],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
@@ -24,28 +24,28 @@ var layout = {
     {
       x: 2,
       y: 5,
-      xref: "x",
-      yref: "y",
-      text: "max=5",
+      xref: 'x',
+      yref: 'y',
+      text: 'max=5',
       showarrow: true,
       font: {
-        family: "Courier New, monospace",
+        family: 'Courier New, monospace',
         size: 16,
-        color: "#ffffff"
+        color: '#ffffff'
       },
-      align: "center",
+      align: 'center',
       arrowhead: 2,
       arrowsize: 1,
       arrowwidth: 2,
-      arrowcolor: "#636363",
+      arrowcolor: '#636363',
       ax: 20,
       ay: -30,
-      bordercolor: "#c7c7c7",
+      bordercolor: '#c7c7c7',
       borderwidth: 2,
       borderpad: 4,
-      bgcolor: "#ff7f0e",
+      bgcolor: '#ff7f0e',
       opacity: 0.8
     }
   ]
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
