--- a/_posts/plotly_js/axes/2015-04-09-axes-labels.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-labels.html
@@ -1,57 +1,57 @@
 ---
 name: Set and Style Axes Title Labels and Ticks
-plot_url: https://plot.ly/~PlotBot/7
+plot_url: https://codepen.io/plotly/embed/4fc1a99f9b12b436dec0a0663a9cd323/?height=486&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [8, 7, 6, 5, 4, 3, 2, 1, 0],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
   xaxis: {
-    title: "AXIS TITLE",
+    title: 'AXIS TITLE',
     titlefont: {
-      family: "Arial, sans-serif",
+      family: 'Arial, sans-serif',
       size: 18,
-      color: "lightgrey"
+      color: 'lightgrey'
     },
     showticklabels: true,
     tickangle: 45,
     tickfont: {
-      family: "Old Standard TT, serif",
+      family: 'Old Standard TT, serif',
       size: 14,
-      color: "black"
+      color: 'black'
     },
-    exponentformat: "e",
-    showexponent: "All"
+    exponentformat: 'e',
+    showexponent: 'All'
   },
   yaxis: {
-    title: "AXIS TITLE",
+    title: 'AXIS TITLE',
     titlefont: {
-      family: "Arial, sans-serif",
+      family: 'Arial, sans-serif',
       size: 18,
-      color: "lightgrey"
+      color: 'lightgrey'
     },
     showticklabels: true,
     tickangle: 45,
     tickfont: {
-      family: "Old Standard TT, serif",
+      family: 'Old Standard TT, serif',
       size: 14,
-      color: "black"
+      color: 'black'
     },
-    exponentformat: "e",
-    showexponent: "All"
+    exponentformat: 'e',
+    showexponent: 'All'
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
