--- a/_posts/plotly_js/axes/2015-04-09-axes-lines.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-lines.html
@@ -1,21 +1,21 @@
 ---
 name: Styling and Coloring Axes and the Zero-Line
-plot_url: https://plot.ly/~PlotBot/5
+plot_url: https://codepen.io/plotly/embed/f7d6db9779e017aad66b28c45121a9b6/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [8, 7, 6, 5, 4, 3, 2, 1, 0],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
@@ -23,25 +23,25 @@ var layout = {
     showgrid: true,
     zeroline: true,
     showline: true,
-    mirror: "ticks",
-    gridcolor: "#bdbdbd",
+    mirror: 'ticks',
+    gridcolor: '#bdbdbd',
     gridwidth: 2,
-    zerolinecolor: "#969696",
+    zerolinecolor: '#969696',
     zerolinewidth: 4,
-    linecolor: "#636363",
+    linecolor: '#636363',
     linewidth: 6
   },
   yaxis: {
     showgrid: true,
     zeroline: true,
     showline: true,
-    mirror: "ticks",
-    gridcolor: "#bdbdbd",
+    mirror: 'ticks',
+    gridcolor: '#bdbdbd',
     gridwidth: 2,
-    zerolinecolor: "#969696",
+    zerolinecolor: '#969696',
     zerolinewidth: 4,
-    linecolor: "#636363",
+    linecolor: '#636363',
     linewidth: 6
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
