--- a/_posts/plotly_js/axes/2015-04-09-axes-range-manual.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-range-manual.html
@@ -1,25 +1,25 @@
 ---
 name: Setting the Range of Axes Manually
-plot_url: https://plot.ly/~PlotBot/9
+plot_url: https://codepen.io/plotly/embed/ebe079a2984fcf86e800a4c76808b2ac/?height=528&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [8, 7, 6, 5, 4, 3, 2, 1, 0],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
   xaxis: {range: [2, 5]},
   yaxis: {range: [2, 5]}
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
