--- a/_posts/plotly_js/axes/2015-04-09-axes-range-mode.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes-range-mode.html
@@ -1,28 +1,28 @@
 ---
 name: <code>nonnegative</code>, <code>tozero</code>, and <code>normal</code> Rangemode
-plot_url: https://plot.ly/~PlotBot/10
+plot_url: https://codepen.io/plotly/embed/10e8cfd24616e2ee37ce316442f00b35/?height=504&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var data = [
   {
     x: [2, 4, 6],
     y: [-3, 0, 3],
-    type: "scatter"
+    type: 'scatter'
   }
 ];
 var layout = {
   showlegend: false,
   xaxis: {
-    rangemode: "tozero",
+    rangemode: 'tozero',
     autorange: true
   },
   yaxis: {
-    rangemode: "nonnegative",
+    rangemode: 'nonnegative',
     autorange: true
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
