--- a/_posts/plotly_js/labels/2015-04-09-styling-names.html
+++ b/_posts/plotly_js/labels/2015-04-09-styling-names.html
@@ -1,42 +1,42 @@
 ---
-name:
-plot_url: https://plot.ly/~PlotBot/17
+name: Styling Names
+plot_url: https://codepen.io/plotly/embed/9c5d7e597190632c7a29dcaddaf69236/?height=547&theme-id=15263&default-tab=result
 language: plotly_js
 suite: labels
 order: 0
 sitemap: false
-
+arrangement: horizontal
 ---
 var trace1 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-  name: "Name of Trace 1",
-  type: "scatter"
+  name: 'Name of Trace 1',
+  type: 'scatter'
 };
 var trace2 = {
   x: [0, 1, 2, 3, 4, 5, 6, 7, 8],
   y: [1, 0, 3, 2, 5, 4, 7, 6, 8],
-  name: "Name of Trace 2",
-  type: "scatter"
+  name: 'Name of Trace 2',
+  type: 'scatter'
 };
 var data = [trace1, trace2];
 var layout = {
-  title: "Plot Title",
+  title: 'Plot Title',
   xaxis: {
-    title: "x Axis",
+    title: 'x Axis',
     titlefont: {
-      family: "Courier New, monospace",
+      family: 'Courier New, monospace',
       size: 18,
-      color: "#7f7f7f"
+      color: '#7f7f7f'
     }
   },
   yaxis: {
-    title: "y Axis",
+    title: 'y Axis',
     titlefont: {
-      family: "Courier New, monospace",
+      family: 'Courier New, monospace',
       size: 18,
-      color: "#7f7f7f"
+      color: '#7f7f7f'
     }
   }
 };
-Plotly.plot("myDiv", data, layout);
+Plotly.newPlot('myDiv', data, layout);
