cleaned up notebooks page

--- a/_posts/user_guide_python/2015-06-30-pdf-reports.html
+++ b/_posts/user_guide_python/2015-06-30-pdf-reports.html
@@ -59,6 +59,16 @@ Collecting pyPdf2 (from xhtml2pdf)
 [?25hRequirement already satisfied (use --upgrade to upgrade): six in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from html5lib-&gt;xhtml2pdf)
 Requirement already satisfied (use --upgrade to upgrade): pip&gt;=1.4.1 in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from reportlab&gt;=2.2-&gt;xhtml2pdf)
 Requirement already satisfied (use --upgrade to upgrade): setuptools&gt;=2.2 in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages (from reportlab&gt;=2.2-&gt;xhtml2pdf)
+Building wheels for collected packages: xhtml2pdf, pyPdf2, reportlab
+  Running setup.py bdist_wheel for xhtml2pdf
+  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/30/29/7d/2a654daefdfc4a22b8db5c40ed5484e0826795156f8db80fab
+  Running setup.py bdist_wheel for pyPdf2
+  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/fb/dc/59/8509bdf92a52265bede0c75a70f2af01da24c109405799f623
+  Running setup.py bdist_wheel for reportlab
+  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/f5/d5/b5/ac451e39e9ca2f401a62afd1f841522af903701caca19f1c16
+Successfully built xhtml2pdf pyPdf2 reportlab
+Installing collected packages: pyPdf2, Pillow, reportlab, xhtml2pdf
+Successfully installed Pillow-2.9.0 pyPdf2-1.25.1 reportlab-3.2.0 xhtml2pdf-0.0.6
 </pre>
 </div>
 </div>
@@ -399,22 +409,4 @@ Requirement already satisfied (use --upgrade to upgrade): setuptools&gt;=2.2 in 
 </div>
 </div>
 
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Learn-more">Learn more<a class="anchor-link" href="#Learn-more">&#182;</a></h3><ul>
-<li>Questions? <support@plot.ly></li>
-<li><a href="https://plot.ly/python/getting-started">Getting started with Plotly and Python</a></li>
-<li><a href="http://moderndata.plot.ly/update-plotly-charts-with-cron-jobs-and-python/">Updating Plotly graphs with Python and cron jobs</a></li>
-<li><a href="https://plot.ly/python/offline">Using Plotly offline in IPython notebooks</a></li>
-<li><a href="http://moderndata.plot.ly/generate-html-reports-with-python-pandas-and-plotly/">Generate HTML reports with Python, Pandas, and Plotly</a></li>
-<li><a href="https://plot.ly/python/email-reports/">Emailing Plotly graphs with Python</a></li>
-<li><a href="https://github.com/plotly/documentation/tree/gh-pages">Edit this tutorial</a></li>
-</ul>
-
-</div>
-</div>
 </div>{% endraw %}
